ObjAsm Added setup page.

--- a/program.htm
+++ b/program.htm
@@ -22,6 +22,7 @@
     <a href="#gnu">             <img src="img/photos/gnu.jpg"           class="t0" title="GNU"/></a>
     <a href="#wine">            <img src="img/photos/wine.jpg"          class="t0" title="Wine"/></a>
     <a href="#masm32">          <img src="img/photos/masm32.jpg"        class="t0" title="MASM32"/></a>
+    <a href="#objasm">          <img src="img/photos/objasm.jpg"        class="t0" title="ObjAsm"/></a>
     <a href="#mingw">           <img src="img/photos/mingw.jpg"         class="t0" title="MinGW"/></a>
     <a href="#nasm">            <img src="img/photos/nasm.jpg"          class="t0" title="Netwide Assembler (NASM)"/></a>
     <a href="#hla">             <img src="img/photos/hla.jpg"           class="t0" title="High Level Assembly(HLA)"/></a>
@@ -683,6 +684,16 @@ Set Scrollbar</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/masm32_text.htm">
     Draw Text</a><br>
+<br><br><br><br>
+
+<div id="objasm"></div>
+<h3><img src="img/photos/objasm.jpg" class="floatLeft"/>
+ObjAsm</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="program/objasm_setup.htm">
+開發環境</a><br>
 <br><br><br><br>
 
 <div id="mingw"></div>
