--- a/program/objasm_setup.htm
+++ b/program/objasm_setup.htm
@@ -34,6 +34,14 @@ $ mv ObjAsm /home/user/.wine_amd64/drive_c/
 </pre><br>
 
 <p>
+添加OBJASM_PATH環境變數
+</p>
+<pre>
+$ wine regedit
+</pre>
+<p>
+<img style="border:0px" src="objasm_setup/2.jpg" class="maxSize"><br><br>
+
 接着測試是否可以正常執行程式
 </p>
 <pre>
