--- a/program/objasm_setup.htm
+++ b/program/objasm_setup.htm
@@ -37,7 +37,7 @@ $ mv ObjAsm /home/user/.wine_amd64/drive_c/
 添加OBJASM_PATH環境變數
 </p>
 <pre>
-$ wine regedit
+$ WINEPREFIX=/home/user/.wine_amd64 wine regedit
 </pre>
 <p>
 <img style="border:0px" src="objasm_setup/2.jpg" class="maxSize"><br><br>
