--- a/program.htm
+++ b/program.htm
@@ -694,6 +694,14 @@ ObjAsm</h3>
 &dash;
 <a href="program/objasm_setup.htm">
 開發環境</a><br>
+
+&dash;
+<a href="program/objasm_makefile.htm">
+Makefile</a><br>
+
+&dash;
+<a href="program/objasm_hello.htm">
+Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="mingw"></div>
