--- a/program.htm
+++ b/program.htm
@@ -702,6 +702,13 @@ Makefile</a><br>
 &dash;
 <a href="program/objasm_hello.htm">
 Hello, world!</a><br>
+
+&oplus;
+<b>Dialog</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/objasm_dlg_window.htm">
+    Create Window</a><br>
 <br><br><br><br>
 
 <div id="mingw"></div>
