ObjAsm Fixed WC_DIALOG issue.

--- a/program/objasm_dlg_window.htm
+++ b/program/objasm_dlg_window.htm
@@ -25,7 +25,7 @@ Object MyApp, , SdiApp
 ObjectEnd
  
 Method MyApp.Init
-    invoke CreateWindowEx, WS_EX_LEFT, 8002h, offset szCaption, 
+    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, offset szCaption, 
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
 MethodEnd
  
