--- a/program.htm
+++ b/program.htm
@@ -709,6 +709,10 @@ Hello, world!</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/objasm_dlg_window.htm">
     Create Window</a><br>
+
+&dash;
+<a href="program/objasm_fix_wc.htm">
+解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
 
 <div id="mingw"></div>
