--- a/program/objasm_dlg_window.htm
+++ b/program/objasm_dlg_window.htm
@@ -18,11 +18,13 @@ SysSetup OOP, WIN32, ANSI_STRING
 %includelib &amp;LibPath&amp;Windows\shell32.lib
    
 MakeObjects Primer, Stream, WinPrimer, Window, Button, Hyperlink, Dialog, DialogModal, DialogAbout, WinApp, SdiApp
-   
+
+    .const   
 Object MyApp, , SdiApp
     RedefineMethod Init
 ObjectEnd
    
+    .code
 Method MyApp.Init, uses esi
     SetObject esi
     invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, $OfsCStr("main"), 
@@ -30,7 +32,6 @@ Method MyApp.Init, uses esi
     m2m [xsi].hWnd, eax
 MethodEnd
 
-    .code
 start proc
     SysInit
    
