--- a/program/objasm_hello.htm
+++ b/program/objasm_hello.htm
@@ -18,16 +18,17 @@ SysSetup OOP, WIN32, ANSI_STRING
 %includelib &amp;LibPath&amp;Windows\shell32.lib
  
 MakeObjects Primer, Stream, WinPrimer, Window, Button, Hyperlink, Dialog, DialogModal, DialogAbout, WinApp, DlgApp
- 
+
+    .const 
 Object MyApp, , DlgApp
     RedefineMethod Init
 ObjectEnd
  
+    .code
 Method MyApp.Init
     invoke MessageBox, NULL, $OfsCStr("Hello, world!"), $OfsCStr("main"), MB_OK
 MethodEnd
 
-    .code
 start proc
     SysInit
  
