--- a/program/objasm_dlg_window.htm
+++ b/program/objasm_dlg_window.htm
@@ -27,6 +27,8 @@ ObjectEnd
     .code
 Method MyApp.Init, uses esi
     SetObject esi
+
+    ACall esi.Init
     invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, $OfsCStr("main"), 
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
     m2m [xsi].hWnd, eax
