--- a/program/objasm_dlg_event.htm
+++ b/program/objasm_dlg_event.htm
@@ -30,6 +30,7 @@ ObjectEnd
     .code
 Method MyApp.Init, uses esi
     SetObject esi
+    ACall esi.Init
     invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, $OfsCStr("main"), 
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
     m2m [esi].hWnd, eax
@@ -40,7 +41,6 @@ MethodEnd
 
 Method MyApp.WndProc, uses esi, uMsg:UINT, wParam:WPARAM, lParam:LPARAM
     SetObject esi
-
     ACall esi.WndProc, uMsg, wParam, lParam
     .if uMsg == WM_CLOSE
         invoke DestroyWindow, [esi].hWnd
