ObjAsm Added more examples.

--- a/program.htm
+++ b/program.htm
@@ -714,6 +714,17 @@ Hello, world!</a><br>
     <a href="program/objasm_dlg_event.htm">
     Handle Event</a><br>
 
+&oplus;
+<b>Single Document Interface (SDI)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/objasm_sdi_window.htm">
+    Create Window</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/objasm_sdi_event.htm">
+    Handle Event</a><br>
+
 &dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
