--- a/program/objasm_dlg_event.htm
+++ b/program/objasm_dlg_event.htm
@@ -9,7 +9,7 @@
 https://github.com/ObjAsm<br>
 https://objasm.x10host.com/index.htm<br><br>
 
-main.c
+main.asm
 </p>
 <pre class="brush:asm">
 %include @Environ(OBJASM_PATH)\Code\Macros\Model.inc
