--- a/program/objasm_dlg_window.htm
+++ b/program/objasm_dlg_window.htm
@@ -17,10 +17,10 @@ SysSetup OOP, WIN32, ANSI_STRING
    
 %includelib &amp;LibPath&amp;Windows\shell32.lib
    
-MakeObjects Primer, Stream, WinPrimer, Window, Button, Hyperlink, Dialog, DialogModal, DialogAbout, WinApp, SdiApp
+MakeObjects Primer, Stream, WinPrimer, Window, Button, Hyperlink, Dialog, DialogModal, DialogAbout, WinApp, DlgApp
 
     .const   
-Object MyApp, , SdiApp
+Object MyApp, , DlgApp
     RedefineMethod Init
 ObjectEnd
    
