--- a/program/objasm_makefile.htm
+++ b/program/objasm_makefile.htm
@@ -10,10 +10,11 @@ export WINEPREFIX=/home/user/.wine_amd64
 TARGET=main
 MYWINE=box86 wine
 OBJASM=/home/user/.wine_amd64/drive_c/ObjAsm
+MASM32=/home/user/.wine_amd64/drive_c/masm32
 
 all:
 	${MYWINE} ${OBJASM}/Build/Tools/Assembler/uasm32.exe @c:/ObjAsm/Build/Options/OPT_ASM_RLS_32.txt ${TARGET}.asm
-	${MYWINE} ${OBJASM}/Build/Tools/Linker/link.exe @c:/ObjAsm/Build/Options/OPT_LNK_RLS_32.txt ${TARGET}.obj
+	${MYWINE} ${MASM32}/bin/link.exe @c:/ObjAsm/Build/Options/OPT_LNK_RLS_32.txt ${TARGET}.obj
 
 run:
 	${MYWINE} ${TARGET}.exe
