--- a/program/objasm_hello.htm
+++ b/program/objasm_hello.htm
@@ -15,12 +15,10 @@ main.asm
 %include @Environ(OBJASM_PATH)\Code\Macros\Model.inc
 SysSetup OOP, WIN32, ANSI_STRING
   
-%includelib &amp;LibPath&amp;Windows\shell32.lib
-  
-MakeObjects Primer, Stream, WinPrimer, Window, Button, Hyperlink, Dialog, DialogModal, DialogAbout, WinApp, DlgApp
+MakeObjects Primer
  
     .const 
-Object MyApp, , DlgApp
+Object MyApp, , Primer
     RedefineMethod Init
 ObjectEnd
   
