--- a/program/objasm_setup.htm
+++ b/program/objasm_setup.htm
@@ -31,6 +31,10 @@ $ cd
 $ wget https://github.com/steward-fu/website/releases/download/objasm/objasm.tar.gz
 $ tar xvf objasm.tar.gz
 $ mv ObjAsm /home/user/.wine_amd64/drive_c/
+
+$ wget https://github.com/steward-fu/website/releases/download/masm32/masm32.tar.gz
+$ tar xvf masm32.tar.gz
+$ mv masm32 /home/user/.wine_amd64/drive_c/
 </pre><br>
 
 <p>
