--- a/program.htm
+++ b/program.htm
@@ -726,6 +726,10 @@ Hello, world!</a><br>
     Handle Event</a><br>
 
 &dash;
+<a href="program/objasm_keyboard.htm">
+Keyboard Event</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
