ObjAsm Added an example for mouse event.

--- a/program.htm
+++ b/program.htm
@@ -730,6 +730,10 @@ Hello, world!</a><br>
 Keyboard Event</a><br>
 
 &dash;
+<a href="program/objasm_mouse.htm">
+Mouse Event</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
