ObjAsm Added an example for timer.

--- a/program.htm
+++ b/program.htm
@@ -734,6 +734,10 @@ Keyboard Event</a><br>
 Mouse Event</a><br>
 
 &dash;
+<a href="program/objasm_timer.htm">
+Set Timer</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
