ObjAsm Added an example for scrollbar.

--- a/program.htm
+++ b/program.htm
@@ -738,6 +738,10 @@ Mouse Event</a><br>
 Set Timer</a><br>
 
 &dash;
+<a href="program/objasm_scrollbar.htm">
+Set Scrollbar</a><br>
+
+&dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
 <br><br><br><br>
