ObjAsm Added an example about how to set pixel.

--- a/program.htm
+++ b/program.htm
@@ -741,6 +741,13 @@ Set Timer</a><br>
 <a href="program/objasm_scrollbar.htm">
 Set Scrollbar</a><br>
 
+&oplus;
+<b>Painting</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/objasm_pixel.htm">
+    Set Pixel</a><br>
+    
 &dash;
 <a href="program/objasm_fix_wc.htm">
 解決WC_DIALOG無法執行的問題</a><br>
