ObjAsm Added more examples.

--- a/program/objasm_line.htm
+++ b/program/objasm_line.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Create Pen</b></h3>
+<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Draw Line</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -44,17 +44,31 @@ MethodEnd
   
 Method MyApp.OnPaint, uses esi, wParam:WPARAM, lParam:LPARAM
     local hDC:HDC
-    local hPen:DWORD
+    local hPen[3]:DWORD
     local PS:PAINTSTRUCT
   
     SetObject esi
     mov hDC, $invoke(BeginPaint, [esi].hWnd, addr PS)
-    mov hPen, $invoke(CreatePen, PS_SOLID, 10, 0ffh)
-    invoke SelectObject, hDC, hPen
-    invoke MoveToEx, hDC, 0, 0, NULL
-    invoke LineTo, hDC, 100, 100
+    mov hPen[0], $invoke(CreatePen, PS_SOLID, 3, 0ffh)
+    mov hPen[4], $invoke(CreatePen, PS_SOLID, 3, 0ff00h)
+    mov hPen[8], $invoke(CreatePen, PS_SOLID, 3, 0ff0000h)
+
+    invoke SelectObject, hDC, hPen[0]
+    invoke MoveToEx, hDC, 10, 100, NULL
+    invoke LineTo, hDC, 250, 100
+
+    invoke SelectObject, hDC, hPen[4]
+    invoke MoveToEx, hDC, 10, 150, NULL
+    invoke LineTo, hDC, 250, 150
+
+    invoke SelectObject, hDC, hPen[8]
+    invoke MoveToEx, hDC, 10, 200, NULL
+    invoke LineTo, hDC, 250, 200
+
     invoke EndPaint, [esi].hWnd, addr PS
-    invoke DeleteObject, hPen
+    invoke DeleteObject, hPen[0]
+    invoke DeleteObject, hPen[4]
+    invoke DeleteObject, hPen[8]
 MethodEnd
  
 start proc
@@ -73,7 +87,7 @@ end
 
 <p>
 完成<br>
-<img style="border:0px" src="nasm_win32_pen/1.jpg" class="maxSize">
+<img style="border:0px" src="nasm_win32_line/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
