--- a/program/objasm_polygon.htm
+++ b/program/objasm_polygon.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Create Pen</b></h3>
+<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Draw Polygon</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -45,16 +45,29 @@ MethodEnd
 Method MyApp.OnPaint, uses esi, wParam:WPARAM, lParam:LPARAM
     local hDC:HDC
     local hPen:DWORD
+    local pt[3]:POINT
+    local hBrush:DWORD
     local PS:PAINTSTRUCT
   
     SetObject esi
     mov hDC, $invoke(BeginPaint, [esi].hWnd, addr PS)
-    mov hPen, $invoke(CreatePen, PS_SOLID, 10, 0ffh)
+    mov hPen, $invoke(CreatePen, PS_SOLID, 3, 0ffh)
+    mov hBrush, $invoke(CreateSolidBrush, 0ff00h)
+
     invoke SelectObject, hDC, hPen
-    invoke MoveToEx, hDC, 0, 0, NULL
-    invoke LineTo, hDC, 100, 100
+    invoke SelectObject, hDC, hBrush
+
+    mov pt[sizeof POINT * 0].x, 150
+    mov pt[sizeof POINT * 0].y, 10
+    mov pt[sizeof POINT * 1].x, 50
+    mov pt[sizeof POINT * 1].y, 200
+    mov pt[sizeof POINT * 2].x, 250
+    mov pt[sizeof POINT * 2].y ,200
+    invoke Polygon, hDC, addr pt, 3
+
     invoke EndPaint, [esi].hWnd, addr PS
     invoke DeleteObject, hPen
+    invoke DeleteObject, hBrush
 MethodEnd
  
 start proc
@@ -73,7 +86,7 @@ end
 
 <p>
 完成<br>
-<img style="border:0px" src="nasm_win32_pen/1.jpg" class="maxSize">
+<img style="border:0px" src="nasm_win32_polygon/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
