--- a/program/objasm_brush.htm
+++ b/program/objasm_brush.htm
@@ -14,55 +14,58 @@ main.asm
 <pre class="brush:asm">
 %include @Environ(OBJASM_PATH)\Code\Macros\Model.inc
 SysSetup OOP, WIN32, ANSI_STRING
- 
+  
 MakeObjects Primer, Stream, WinPrimer, Window, WinApp, SdiApp
- 
+  
     .const
 CStr szName, "main"
- 
+  
 Object MyApp, , SdiApp
     RedefineMethod Init
     VirtualEvent OnPaint, WM_PAINT
-
+ 
     DefineVariable wndClass, WNDCLASS, {0}
 ObjectEnd
- 
+  
     .code    
 Method MyApp.Init, uses esi
     SetObject esi
     ACall esi.Init
- 
+  
     m2m [esi].wndClass.hbrBackground, COLOR_WINDOW
     m2m [esi].wndClass.lpfnWndProc, $MethodAddr(MyApp.WndProc)
     m2m [esi].wndClass.lpszClassName, offset szName
     invoke RegisterClass, addr [esi].wndClass
- 
+  
     invoke CreateWindowEx, WS_EX_LEFT, offset szName, offset szName,
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, pSelf
     m2m [esi].hWnd, eax
 MethodEnd
- 
+  
 Method MyApp.OnPaint, uses esi, wParam:WPARAM, lParam:LPARAM
     local hDC:HDC
+    local hBrush:DWORD
     local PS:PAINTSTRUCT
- 
+  
     SetObject esi
     mov hDC, $invoke(BeginPaint, [esi].hWnd, addr PS)
-    invoke FillRect, hDC, addr PS.rcPaint, $invoke(CreateSolidBrush, 0ffh)
+    mov hBrush, $invoke(CreateSolidBrush, 0ffh)
+    invoke FillRect, hDC, addr PS.rcPaint, hBrush
     invoke EndPaint, [esi].hWnd, addr PS
+    invoke DeleteObject, hBrush
 MethodEnd
-
+ 
 start proc
     SysInit
- 
+  
     OCall $ObjTmpl(MyApp)::MyApp.Init
     OCall $ObjTmpl(MyApp)::MyApp.Run
     OCall $ObjTmpl(MyApp)::MyApp.Done
- 
+  
     SysDone
     invoke ExitProcess, 0
 start endp
- 
+  
 end
 </pre><br>
 
