--- a/program/objasm_text.htm
+++ b/program/objasm_text.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Create Pen</b></h3>
+<h3><a href="../program.htm">程式語言</a> - ObjAsm - Painting - <b>Draw Text</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -44,17 +44,21 @@ MethodEnd
   
 Method MyApp.OnPaint, uses esi, wParam:WPARAM, lParam:LPARAM
     local hDC:HDC
-    local hPen:DWORD
+    local hFont:DWORD
     local PS:PAINTSTRUCT
   
     SetObject esi
     mov hDC, $invoke(BeginPaint, [esi].hWnd, addr PS)
-    mov hPen, $invoke(CreatePen, PS_SOLID, 10, 0ffh)
-    invoke SelectObject, hDC, hPen
-    invoke MoveToEx, hDC, 0, 0, NULL
-    invoke LineTo, hDC, 100, 100
+    mov hFont, $invoke(CreateFont, 48, 0, 0, 0, FW_BOLD, 0, 0, 0, 0, \
+        OUT_OUTLINE_PRECIS, CLIP_DEFAULT_PRECIS, \
+        CLEARTYPE_QUALITY, DEFAULT_PITCH or FF_DONTCARE, $OfsCStr("Arial"))
+
+    invoke SetTextColor, hDC, 0ff0000h
+    invoke SetBkMode, hDC, TRANSPARENT
+    invoke SelectObject, hDC, hFont
+    invoke DrawText, hDC, $OfsCStr("Test"), 4, addr PS.rcPaint, DT_SINGLELINE or DT_CENTER or DT_VCENTER
     invoke EndPaint, [esi].hWnd, addr PS
-    invoke DeleteObject, hPen
+    invoke DeleteObject, hFont
 MethodEnd
  
 start proc
@@ -73,7 +77,7 @@ end
 
 <p>
 完成<br>
-<img style="border:0px" src="nasm_win32_pen/1.jpg" class="maxSize">
+<img style="border:0px" src="nasm_win32_text/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
