--- a/program.htm
+++ b/program.htm
@@ -1523,20 +1523,6 @@ Simple DirectMedia Layer (SDL)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    <b>Assembly (x64)</b><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/x64_hello.htm">
-        Hello, world!</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    <b>Assembly (ARM)</b><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/arm_hello.htm">
-        Hello, world!</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>C/C++</b><br>
         
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
@@ -1591,16 +1577,16 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl_cpp_font.htm">
         Open Font</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_ticks.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_ticks.htm">
         Get Ticks</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_music.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_music.htm">
         Load Music</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_effect.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_effect.htm">
         Music Effect</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
