PinePhone Fixed wrong repo issue.

--- a/phone.htm
+++ b/phone.htm
@@ -20,6 +20,7 @@
 <div id="page"><br><br>
 <p>
     <a href="#n900">            <img src="img/photos/n900.jpg"          class="t0" title="Nokia N900"/></a>
+    <a href="#pinephone">       <img src="img/photos/pinephone.jpg"     class="t0" title="PINE64 PinePhone"/></a>
     <a href="#sk17i">           <img src="img/photos/sk17i.jpg"         class="t0" title="Sony Ericsson Xperia Mini Pro(SK17i)"/></a>
     <a href="#astro">           <img src="img/photos/astro.jpg"         class="t0" title="Astro Slide 5G"/></a>
     <a href="#cosmo">           <img src="img/photos/cosmo.jpg"         class="t0" title="Cosmo Communicator"/></a>
@@ -35,7 +36,6 @@
     <a href="#pro1">            <img src="img/photos/pro1.jpg"          class="t0" title="F(x)tec Pro1"/></a>
     <a href="#titan">           <img src="img/photos/titan.jpg"         class="t0" title="Unihertz Titan"/></a>
     <a href="#pixel3axl">       <img src="img/photos/pixel3axl.jpg"     class="t0" title="Google Pixel 3a XL"/></a>
-    <a href="#pinephone">       <img src="img/photos/pinephone.jpg"     class="t0" title="PINE64 PinePhone"/></a>
     <a href="#f5321">           <img src="img/photos/f5321.jpg"         class="t0" title="Sony Xperia X Compact"/></a>
 </p>
 </div>
@@ -396,6 +396,111 @@ Mugen Power 3.7V 2400mA電池</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/n900_maemo_leste_build_kernel_6_1_9.htm">
     Build Kernel 6.1.9</a><br>
+<br><br><br><br>
+
+<div id="pinephone"></div>
+<h3><img src="img/photos/pinephone.jpg" class="floatLeft"/>
+PINE64 PinePhone</h3>
+<hr size="1"><br><br><br><br><br>
+&dash;
+<a href="phone/pinephone_spec.htm">
+簡要規格</a><br>
+
+&lowast;
+<a href="phone/pinephone/keyboard.htm">
+鍵盤底座</a><br>
+
+&lowast;
+<a href="phone/pinephone/pogo.htm">
+Pogo pins</a><br>
+
+&lowast;
+<a href="phone/pinephone/uart.htm">
+UART pins</a><br>
+
+&lowast;
+<a href="phone/pinephone/towboot.htm">
+安裝tow-boot</a><br>
+
+&lowast;
+<a href="phone/pinephone/build_towboot.htm">
+build tow-boot</a><br>
+
+&lowast;
+<a href="phone/pinephone/flashmode.htm">
+如何進入flashing mode</a><br>
+
+&oplus;
+<b>Sailfish OS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_fix_repo.htm">
+    解決Repository adaptation-community is invalid問題</a><br>
+
+&oplus;
+<b>Fedora</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/fedora_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>LuneOS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/luneos_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Mobian</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/mobian_install.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/mobian_xfce4.htm">
+    安裝XFCE4</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/mobian_build_kernel.htm">
+    build kernel 6.1.12</a><br>
+
+&oplus;
+<b>Kali Linux</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/kali_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Maemo Leste</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/maemo_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Manjaro ARM</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/manjaro_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Ubuntu Touch</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/ubuntu_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>postmarketOS</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/postmarketos_install.htm">
+    安裝系統</a><br>
+
+&oplus;
+<b>Arch Linux ARM</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pinephone/arch_install.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="sk17i"></div>
@@ -1982,107 +2087,6 @@ Partition Table</a><br>
     <a href="phone/pixel3axl/lineageos_fix_sps.htm">
     解決"-fstack-protector-strong not supported by compiler"問題</a><br>
     
-<br><br><br><br>
-
-<div id="pinephone"></div>
-<h3><img src="img/photos/pinephone.jpg" class="floatLeft"/>
-PINE64 PinePhone</h3>
-<hr size="1"><br><br><br><br><br>
-&lowast;
-<a href="phone/pinephone/review.htm">
-介紹</a><br>
-
-&lowast;
-<a href="phone/pinephone/keyboard.htm">
-鍵盤底座</a><br>
-
-&lowast;
-<a href="phone/pinephone/pogo.htm">
-Pogo pins</a><br>
-
-&lowast;
-<a href="phone/pinephone/uart.htm">
-UART pins</a><br>
-
-&lowast;
-<a href="phone/pinephone/towboot.htm">
-安裝tow-boot</a><br>
-
-&lowast;
-<a href="phone/pinephone/build_towboot.htm">
-build tow-boot</a><br>
-
-&lowast;
-<a href="phone/pinephone/flashmode.htm">
-如何進入flashing mode</a><br>
-
-&oplus;
-<b>Fedora</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/fedora_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>LuneOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/luneos_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Mobian</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_install.htm">
-    安裝系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_xfce4.htm">
-    安裝XFCE4</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_build_kernel.htm">
-    build kernel 6.1.12</a><br>
-
-&oplus;
-<b>Kali Linux</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/kali_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Maemo Leste</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/maemo_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Sailfish OS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/sailfishos_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Manjaro ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/manjaro_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Ubuntu Touch</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/ubuntu_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>postmarketOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/postmarketos_install.htm">
-    安裝系統</a><br>
-
-&oplus;
-<b>Arch Linux ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/arch_install.htm">
-    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="f5321"></div>
