--- a/phone.htm
+++ b/phone.htm
@@ -406,35 +406,43 @@ PINE64 PinePhone</h3>
 <a href="phone/pinephone_spec.htm">
 簡要規格</a><br>
 
-&lowast;
-<a href="phone/pinephone/keyboard.htm">
+&dash;
+<a href="phone/pinephone_keyboard.htm">
 鍵盤底座</a><br>
 
-&lowast;
-<a href="phone/pinephone/pogo.htm">
-Pogo pins</a><br>
+&dash;
+<a href="phone/pinephone_pogo.htm">
+Pogo Pins</a><br>
 
-&lowast;
-<a href="phone/pinephone/uart.htm">
-UART pins</a><br>
+&dash;
+<a href="phone/pinephone_uart.htm">
+UART Pins</a><br>
 
-&lowast;
-<a href="phone/pinephone/towboot.htm">
-安裝tow-boot</a><br>
+&dash;
+<a href="phone/pinephone_towboot.htm">
+安裝Tow-boot</a><br>
 
-&lowast;
-<a href="phone/pinephone/build_towboot.htm">
-build tow-boot</a><br>
+&dash;
+<a href="phone/pinephone_build_towboot.htm">
+Build Tow-boot</a><br>
 
-&lowast;
-<a href="phone/pinephone/flashmode.htm">
-如何進入flashing mode</a><br>
+&dash;
+<a href="phone/pinephone_flashmode.htm">
+如何進入Flashing Mode</a><br>
 
 &oplus;
 <b>Sailfish OS</b><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_setup.htm">
     安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_keyboard.htm">
+    設定鍵盤</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_fix_home.htm">
+    解決無法掛載/home問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_fix_repo.htm">
