--- a/phone.htm
+++ b/phone.htm
@@ -450,64 +450,64 @@ Build Tow-boot</a><br>
 
 &oplus;
 <b>Fedora</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/fedora_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_fedora_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>LuneOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/luneos_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_luneos_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Mobian</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_xfce4.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_xfce4.htm">
     安裝XFCE4</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/mobian_build_kernel.htm">
-    build kernel 6.1.12</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_mobian_build_kernel.htm">
+    Build Kernel 6.1.12</a><br>
 
 &oplus;
 <b>Kali Linux</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/kali_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_kali_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Maemo Leste</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/maemo_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_maemo_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Manjaro ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/manjaro_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_manjaro_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Ubuntu Touch</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/ubuntu_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_ubuntu_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>postmarketOS</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/postmarketos_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_postmarketos_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Arch Linux ARM</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pinephone/arch_install.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_arch_setup.htm">
     安裝系統</a><br>
 <br><br><br><br>
 
