--- a/phone.htm
+++ b/phone.htm
@@ -598,9 +598,9 @@ F(x)tec Pro1</h3>
 F(x)tec Pro1 X</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/pro1x/review.htm">
-介紹</a><br>
+&dash;
+<a href="phone/pro1x_spec.htm">
+簡要規格</a><br>
 
 &lowast;
 <a href="phone/pro1x/case.htm">
