--- a/phone.htm
+++ b/phone.htm
@@ -602,20 +602,20 @@ F(x)tec Pro1 X</h3>
 <a href="phone/pro1x_spec.htm">
 簡要規格</a><br>
 
-&lowast;
-<a href="phone/pro1x/case.htm">
+&dash;
+<a href="phone/pro1x_case.htm">
 手機殼</a><br>
 
-&lowast;
-<a href="phone/pro1x/backup.htm">
+&dash;
+<a href="phone/pro1x_backup.htm">
 如何透過edl備份</a><br>
 
-&lowast;
-<a href="phone/pro1x/fix_speaker.htm">
+&dash;
+<a href="phone/pro1x_fix_speaker.htm">
 解決Speaker只有左聲道的問題</a><br>
 
-&lowast;
-<a href="phone/pro1x/fix_edl.htm">
+&dash;
+<a href="phone/pro1x_fix_edl.htm">
 解決開機一直處於edl模式的問題</a><br>
 
 &lowast;
