--- a/phone.htm
+++ b/phone.htm
@@ -445,6 +445,10 @@ Build Tow-boot</a><br>
     設定鍵盤</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_wget.htm">
+    如何安裝Wget</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_landscape.htm">
     如何讓桌面可以橫向顯示</a><br>
 
