--- a/phone/pinephone_sfos_lxc.htm
+++ b/phone/pinephone_sfos_lxc.htm
@@ -8,16 +8,16 @@
 步驟如下：<br>
 </p>
 <pre>
-$ cd
 $ sudo curl zypper install dbus-python3 python3-gobject sailfish-polkit-agent xz
-$ curl https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/noarch/lxc-templates-desktop-1.4-1.18.3.jolla.noarch.rpm --output 1.rpm
-$ curl https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/noarch/lxc-templates-desktop-1.4-1.18.3.jolla.noarch.rpm --output 2.rpm
-$ curl https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/qxcompositor-0.0.6+qtwayland.5.6.20220828010818.7e0ec8a-1.25.3.jolla.aarch64.rpm --output 3.rpm
-$ curl https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/harbour-containers-0.8+devel.k.20220830103353.1.g0c0da06-1.99.3.jolla.aarch64.rpm --output 4.rpm
-$ sudo rpm -i 1.rpm
-$ sudo rpm -i 2.rpm
-$ sudo rpm -i 3.rpm
-$ sudo rpm -i 4.rpm
+
+$ cd
+$ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/noarch/lxc-templates-desktop-1.4-1.18.3.jolla.noarch.rpm
+$ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/harbour-containers-0.8+devel.k.20220830103353.1.g0c0da06-1.99.3.jolla.aarch64.rpm
+$ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/qxcompositor-0.0.6+qtwayland.5.6.20220828010818.7e0ec8a-1.25.3.jolla.aarch64.rpm
+
+$ sudo rpm -i lxc-templates-desktop-1.4-1.18.3.jolla.noarch.rpm
+$ sudo rpm -i qxcompositor-0.0.6+qtwayland.5.6.20220828010818.7e0ec8a-1.25.3.jolla.aarch64.rpm
+$ sudo rpm -i harbour-containers-0.8+devel.k.20220830103353.1.g0c0da06-1.99.3.jolla.aarch64.rpm
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
