--- a/phone/pinephone_sfos_lxc.htm
+++ b/phone/pinephone_sfos_lxc.htm
@@ -8,7 +8,7 @@
 步驟如下：<br>
 </p>
 <pre>
-$ sudo curl zypper install dbus-python3 python3-gobject sailfish-polkit-agent xz
+$ sudo zypper install dbus-python3 python3-gobject sailfish-polkit-agent xz lxc lxc-templates
 
 $ cd
 $ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/noarch/lxc-templates-desktop-1.4-1.18.3.jolla.noarch.rpm
