--- a/program.htm
+++ b/program.htm
@@ -1589,12 +1589,12 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl_cpp_effect.htm">
         Music Effect</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_hookmusicfinish.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_hookmusicfinish.htm">
         Hook Music Finished</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_pixels.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_pixels.htm">
         Pixels Manipulation</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
