--- a/program.htm
+++ b/program.htm
@@ -1597,81 +1597,84 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl_cpp_pixels.htm">
         Pixels Manipulation</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_alpha.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_alpha.htm">
         Set Alpha</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_settimer.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_settimer.htm">
         Set Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_addtimer.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_addtimer.htm">
         Add Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_bmp_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_bmp_rw.htm">
         Load BMP from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_png_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_png_rw.htm">
         Load PNG from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_font_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_font_rw.htm">
         Open Font from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_music_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_music_rw.htm">
         Load Music from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_effect_rw.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_effect_rw.htm">
         Music Effect from Memory</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_thread.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl_cpp_thread.htm">
         Thread</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_pixel.htm">
-        Pixel</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>GFX</b><br>
+        
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_pixel.htm">
+            Draw Pixel</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_line.htm">
-        Line</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_line.htm">
+            Draw Line</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_rectangle.htm">
-        Rectangle</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_rect.htm">
+            Draw Rectangle</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_circle.htm">
-        Circle</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_circle.htm">
+            Draw Circle</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_ellipse.htm">
-        Ellipse</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_ellipse.htm">
+            Draw Ellipse</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_pie.htm">
-        Pie</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_pie.htm">
+            Draw Pie</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_trigon.htm">
-        Trigon</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_trigon.htm">
+            Draw Trigon</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_polygon.htm">
-        Polygon</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_polygon.htm">
+            Draw Polygon</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_bezier.htm">
-        Bezier</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_bezier.htm">
+            Draw Bezier</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v1.2/cpp_gfx_string.htm">
-        String</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/sdl_cpp_gfx_string.htm">
+            Draw String</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/sdl/v1.2/audiodrv.htm">
