--- a/program.htm
+++ b/program.htm
@@ -1676,28 +1676,28 @@ Simple DirectMedia Layer (SDL)</h3>
             <a href="program/sdl_cpp_gfx_string.htm">
             Draw String</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/audiodrv.htm">
-    SDL_AUDIODRIVER支援類型</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_audio_driver.htm">
+    SDL_AUDIODRIVER支援的類型</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/videodrv.htm">
-    SDL_VIDEODRIVER支援類型</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_video_driver.htm">
+    SDL_VIDEODRIVER支援的類型</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/broken_mode.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_broken_mode.htm">
     SDL_FB_BROKEN_MODES用途</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/flip_updaterect.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_flip.htm">
     SDL_Flip()、SDL_UpdateRect()</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/sw_hw_surface.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_surface.htm">
     SDL_SWSURFACE、SDL_HWSURFACE</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/sdl/v1.2/how_doublebuf.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/sdl_doublebuf.htm">
     如何知道SDL是否設定成SDL_DOUBLEBUF</a><br>
 
 &oplus;
