--- a/program.htm
+++ b/program.htm
@@ -1726,16 +1726,16 @@ Simple DirectMedia Layer (SDL)</h3>
         <a href="program/sdl2_cpp_bmp.htm">
         Load BMP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_savebmp.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_savebmp.htm">
         Save BMP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_png.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_png.htm">
         Load PNG</a><br>
         
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/sdl/v2.0/cpp_savepng.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/sdl2_cpp_savepng.htm">
         Save PNG</a><br>
         
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
